# mpc_controller_for_damvi

./: README.txt  setup.py
ekf/: CMakeLists.txt  package.xml
ekf/src/: imu_carto_ekf.cpp
mpc/: README.md  package.xml
mpc/config/: config.yaml
mpc/mpc_controller/: mpc_node.py
mpc_ws/src/mpc_controller/: package.xml
mpc_ws/src/mpc_controller/config/: config.yaml
mpc_ws/src/mpc_controller/map/: Spielberg_map.csv
mpc_ws/src/mpc_controller/mpc_controller/: mpc_node.py
new_mpc/: package.xml  setup.py
new_mpc/config/: config.yaml
new_mpc/map/: 4f_floor.csv  new_factory.csv  updated_wide_factory.csv
new_mpc/mpc_controller/: compare.py  csv_loader.py  dynamic_nonlinear.py  kinematic_nonlinear.py  map_parser.py  mpc_node.py  new_mpc_node.py  path_processor.py  test.py
new_mpc/mpc_controller/modules/: yaw_calculator.py
ptcld2scan/: CMakeLists.txt  package.xml
ptcld2scan/config/: config.yaml
ptcld2scan/launch/: ptcld2scan.launch.py
ptcld2scan/src/: fuser.cpp  projector.cpp
scan2cost/: CMakeLists.txt  package.xml
scan2cost/config/: config.yaml
scan2cost/launch/: scan2cost.launch.py
scan2cost/src/: scan2cost.cpp
