<package format="3">
  <name>mpc_controller</name>
  <version>0.1.0</version>
  <description>MPC-based controller for ROS 2 using CVXPY</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>vesc_msgs</depend>

  <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-yaml</depend>
  <depend>python3-cvxpy</depend>
  <depend>python3-tf-transformations</depend>
  <depend>python3-casadi</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>




